2008-07-22  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c: Added an override for the 'type_register'
	class method so that custom subclasses of Clutter::Actor won't
	break the reference counting.

2008-07-21  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogltexture.c: Converted to use the boxed value of
	CLUTTER_TYPE_TEXTURE_HANDLE so that it can be used as a value for
	the 'cogl_texture' property of Clutter::Texture.

2008-07-21  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltcontainer.c: Added bindings for handling the child
	meta data properties.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogloffscreen.c: 
	* clutter/extconf.rb: 
	* clutter/rbclutter.c: Add wrappers for the Cogl FBO API.

	* clutter/rbcogltexture.h: 
	* clutter/rbcogltexture.c (rb_cogl_texture_get_handle): Made the
	get handle function public.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcoglshader.h: 
	* clutter/rbcoglshader.c: 
	* clutter/rbcoglprogram.c: 
	* clutter/rbclutter.c: 
	* clutter/extconf.rb: Add wrappers for the Cogl shader and
	program API

	* clutter/rbcoglconsts.c: 
	* extra/mkcoglconsts.rb: Include Cogl constants that are wrappers
	for GL constants ending in *_ARB.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.c (rbclt_num_to_angle): New helper function to
	* clutter/rbclutter.h: 
	convert a ruby value to a ClutterAngle

	* clutter/extconf.rb: 
	* clutter/rbcoglprimitives.c: Added wrappers for the Cogl
	primitives API.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.h: 
	* clutter/rbclutter.c: Added wrapper functions for converting from
	Ruby values to ClutterFixed or ClutterUnit that avoid going
	through a double of the VALUE is a fixed number.

	* clutter/rbcogltexture.c: 
	* clutter/rbcogl.c: 
	* clutter/mkboxedtype.rb: Use the new wrapper for converting to
	ClutterFixed and ClutterUnit

2008-07-13  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogltexture.c: 
	* clutter/extconf.rb: 