@@ -1,0 +1,34 @@
+/* Ruby bindings for the Clutter 'interactive canvas' library.
+ * Copyright (C) 2008  Neil Roberts
+ * 
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ * 
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ * 
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+ * MA  02110-1301  USA
+ */
+
+#include <rbgobject.h>
+#include <clutter/clutter-child-meta.h>
+#include <clutter/clutter-container.h>
+
+#include "rbclutter.h"
+
+void
+rbclt_child_meta_init ()
+{
+  G_DEF_CLASS (CLUTTER_TYPE_CHILD_META, "ChildMeta",
+	       rbclt_c_clutter);
+
+  /* All public methods for ClutterChildMeta are also implemented as
+     properties so nothing else needs to be done */
+}
